--- a/game.css
+++ b/game.css
@@ -2,3 +2,24 @@
 {
     text-align: center;
 }
+
+
+.stat-bar-container 
+{
+    width: 300px;
+    height: 30px;
+    background-color: #ccc;
+    border: 2px solid #333;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+.stat-bar 
+{
+    height: 100%;
+    width: 100%; 
+    background-color: #4caf50; 
+    transition: width 0.3s ease-in-out;
+}
+
